samples/_failures_safe/1761801253_e2d563_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_47cde4d6.c: In function ‘print_errors’:
./samples/SAFE/__tmp_47cde4d6.c:131:46: error: expected ‘;’ at end of input
  131 |     for (int i = 0; i < analyzer->entry_count
      |                                              ^
      |                                              ;
./samples/SAFE/__tmp_47cde4d6.c:131:5: error: expected declaration or statement at end of input
  131 |     for (int i = 0; i < analyzer->entry_count
      |     ^~~
